<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AudioSample</string>
    <string name="hint">Input speech text</string>
    <string name="speech">Speech</string>
    <string name="check">With Audio Focus</string>
    <string name="use_speakerphone">Use Speakerphone</string>
    <string name="use_bluetooth_device">Use Bluetooth Device</string>
    <string name="stream_volume">Volume: </string>
    <string name="stream_name">Stream: </string>
    <string name="mode">Mode: </string>
    <string name="show_media_routes">Show Media Routes</string>
    <string name="title_media_routes">Media Routes</string>
    <string name="error_utterance_progress">Something went wrong while speeching.</string>
</resources>
